--- a/src/layouts/Common.astro
+++ b/src/layouts/Common.astro
@@ -1,3 +1,4 @@
+---
 export interface MenuItem {
   link: string;
   txt: string;
@@ -29,7 +30,8 @@ export const common: CommonConfig = {
     ogImg: "https://www.XXXXX.XX.XX/_assets/img/ogimg.jpg",
     logo: "https://www.XXXXX.XX.XX/_assets/img/logo.svg", // JSON LD用企業ロゴ
     copyright: "XXXX",
-    webfont: "https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap", // 不要の場合は空
+    webfont:
+      "https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap", // 不要の場合は空
     twitterName: "", // Twitterアカウントある場合記述
     facebookID: "", // Facebookアカウントある場合記述
   },
@@ -69,3 +71,4 @@ export const common: CommonConfig = {
     },
   ],
 };
+---
