--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,7 @@
 ---
-import "@/scss/vendors/_reset.css";
-import "@/scss/base/_default.scss";
-import "@/scss/base/_general.scss";
-import "@/scss/vendors/_tailwind.css";
-import "@/scss/pages/_top.scss";
 import Layout from "@/layouts/Layout.astro";
-import About from "@/pages/_parts/_about.astro";
-
+import About from "@/pages/_parts/_top/_about.astro";
+import "@/scss/pages/_top.scss";
 const page = {
   head: {
     slug: "top",
@@ -16,11 +11,12 @@ const page = {
   },
   contents: {},
 };
+const imgPath = "/_assets/img/" + page.head.slug + "/";
 ---
 
 <Layout page={page.head}>
   <div class="grid gap-60">
-    <About />
+    <About imgPath={imgPath} />
     <div class="contentInner">
       <p>
         あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎらひかる草の波。
