--- a/src/scss/abstracts/_config.scss
+++ b/src/scss/abstracts/_config.scss
@@ -22,7 +22,7 @@ $spDesign: 375; // SPデザインサイズ
 $logoWidth: 200; // ロゴ幅
 
 // 画像パス
-$imgPath: "/img/";
+$imgPath: "/_assets/img/";
 
 // フォント設定
 $spFontVw: "false"; // SP時にフォントサイズを可変(vw)にする
