--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -83,10 +83,7 @@ const {
 	<meta charset="utf-8" />
   <BeginHead />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta
-		name="viewport"
-		content="width=device-width,initial-scale=1.0,shrink-to-fit=no"
-	/>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
 	<meta name="format-detection" content="telephone=no" />
 	<title>{page.title}</title>
 	<meta name="description" content={page.description} />
@@ -107,17 +104,20 @@ const {
   {site.twitterName && (
     <meta name="twitter:site", content={"@" + site.twitterName} />
   )}
-	<link rel="icon" href={site.favicon} />
+	<link rel="icon" href={site.favicon} sizes="32x32" />
   {site.svgIcon && (
     <link rel="icon" href={site.svgIcon} type="image/svg+xml" />
   )}
   {site.touchIcon && (
-    <link rel="apple-touch-icon" sizes="180x180" href={site.touchIcon} />
+    <link rel="apple-touch-icon" href={site.touchIcon} />
   )}
 	<link rel="canonical" href={site.domain + page.url} />
   {site.webfont &&(
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href={site.webfont} />
+    <link rel="preload" href={site.webfont} as="style" onload="this.onload=null;this.rel='stylesheet'"/>
+    <noscript>
+      <link rel="stylesheet" href={site.webfont}>
+    </noscript>
   )}
 </head>
