--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,8 +3,13 @@ import Head from "@/layouts/Head.astro";
 import Header from "@/layouts/Header.astro";
 import BeginBody from "@/layouts/BeginBody.astro";
 import Footer from "@/layouts/Footer.astro";
-import { common } from "@/data/common"; // グローバルなサイト設定
+import { common } from "@/layouts/Common.astro"; // グローバルなサイト設定
 
+import "../scss/vendors/_reset.css";
+import "../scss/vendors/_tailwind.css";
+import.meta.glob("../scss/base/*.scss", { eager: true });
+import.meta.glob("../scss/layouts/*.scss", { eager: true });
+import.meta.glob("../scss/components/*.scss", { eager: true });
 /**
  * レイアウトコンポーネントの Props 型定義。
  * 現在のページ情報
@@ -37,7 +42,7 @@ const { page } = Astro.props;
     </main>
     <Footer copyright={common.head.copyright} />
     <script>
-      import "../js/app.js";
+      import "@/js/app.js";
     </script>
   </body>
 </html>
