--- a/src/pages/_parts/_hoge/_hoge.astro
+++ b/src/pages/_parts/_hoge/_hoge.astro
@@ -2,23 +2,14 @@
 
 ---
 
-<section class="sec_top">
+<section>
   <div class="contentInner">
-    <h2 class="text-h2 mb-24 font-bold">Astro-dev</h2>
+    <h2 class="text-h2 mb-24 font-bold">下層サンプル</h2>
     <p>
       あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎらひかる草の波。
       <span class="text-second text-lg font-bold">
         あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎらひかる草の波。
       </span>
     </p>
-    <img
-      src="/_assets/img/top/sample.png"
-      class="w-full"
-      loading="lazy"
-      decoding="async"
-      width="300"
-      height="200"
-      alt=""
-    />
   </div>
 </section>
