--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import.meta.glob("../scss/components/*.scss", { eager: true });
 interface Props {
   page: {
     slug: string;
-    title: string;
+    ttl: string;
     description: string;
     url: string;
   };
