--- a/src/pages/hoge/index.astro
+++ b/src/pages/hoge/index.astro
@@ -9,7 +9,7 @@ import "@/scss/pages/_sample.scss";
 const page = {
   head: {
     slug: "hoge",
-    title: "XXXについて｜XXXXX",
+    ttl: "XXXについて｜XXXXX",
     description: "テキストテキストテキストテキストテキストテキスト",
     url: "",
     breadcrumbs: [
