--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import "@/scss/pages/_top.scss";
 const page = {
   head: {
     slug: "top",
-    title: "タイトルタイトルタイトル",
+    ttl: "タイトルタイトルタイトル",
     description: "テキストテキストテキストテキストテキストテキスト",
     url: "",
   },
