--- a/src/scss/abstracts/_functions.scss
+++ b/src/scss/abstracts/_functions.scss
@@ -1,26 +1,5 @@
-@use "sass:map";
-@use "sass:math";
-@use "sass:string";
-@use "config" as *;
-
+@use "variables" as *;
 // rem変換
 @function rem($pxSize) {
   @return ($pxSize * 0.1) + rem;
-}
-
-// SP可変サイズ
-@function spSize($spSize: 1) {
-  $magnification: 1;
-  @if $spDesign < 750 {
-    // SPデザインが等倍だった場合最大サイズを2倍に変更
-    $magnification: 2;
-  } @else {
-    // そのままでOK
-  }
-  @return string.unquote("min(#{math.div(100, $spDesign) * $spSize}vw,#{math.div($spSize * $magnification, 10) + rem})");
-}
-
-// PC可変サイズ
-@function pcSize($pcSize: 1) {
-  @return string.unquote("min(#{math.div(100, $pcDesign) * $pcSize}vw,#{math.div($pcSize, 10) + rem})");
 }
