--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,79 +1,26 @@
-@use "config" as *;
-@use "mixins" as *;
-@use "functions" as *;
-@use "sass:list";
+// ブレークポイント
+$brakePoint: 768;
 
-:root {
-  // サイズ
-  --size-container: #{$containerSize}; // コンテナサイズ
-  --size-logo: #{$logoWidth}; // ロゴサイズ
+//　コンテナサイズ
+$containerSize: 1200; // コンテンツ幅
+$containerPadding: 16; // コンテンツ余白
 
-  // line-heightの上下の余白をマージンから消す(marginに指定)
-  --leading-trim: calc((1em - 1lh) / 2);
+// 画像パス
+$imgPath: "/_assets/img/";
 
-  // フォント
-  --font-family-base: #{$baseFont};
-  --font-setting-base: var(--font-weight-normal) var(--font-size-base) / var(--font-leading) var(--font-family-base);
-  // SP時のフォントサイズにvwを使用
-  @if $spFontVw == "true" {
-    --font-size-heading-1: #{spSize(list.nth($h1, 2))};
-    --font-size-heading-2: #{spSize(list.nth($h2, 2))};
-    --font-size-heading-3: #{spSize(list.nth($h3, 2))};
-    --font-size-heading-4: #{spSize(list.nth($h4, 2))};
-    --font-size-heading-5: #{spSize(list.nth($h5, 2))};
-    --font-size-large-2: #{spSize(list.nth($xl, 2))};
-    --font-size-large-1: #{spSize(list.nth($lg, 2))};
-    --font-size-base: #{spSize(list.nth($base, 2))};
-    --font-size-small-1: #{spSize(list.nth($sm, 2))};
-    --font-size-small-2: #{spSize(list.nth($xs, 2))};
-  } @else {
-    --font-size-heading-1: #{rem(list.nth($h1, 2))};
-    --font-size-heading-2: #{rem(list.nth($h2, 2))};
-    --font-size-heading-3: #{rem(list.nth($h3, 2))};
-    --font-size-heading-4: #{rem(list.nth($h4, 2))};
-    --font-size-heading-5: #{rem(list.nth($h5, 2))};
-    --font-size-large-2: #{rem(list.nth($xl, 2))};
-    --font-size-large-1: #{rem(list.nth($lg, 2))};
-    --font-size-base: #{rem(list.nth($base, 2))};
-    --font-size-small-1: #{rem(list.nth($sm, 2))};
-    --font-size-small-2: #{rem(list.nth($xs, 2))};
-  }
-  // PC時
-  @include mq() {
-    --font-size-heading-1: #{rem(list.nth($h1, 1))};
-    --font-size-heading-2: #{rem(list.nth($h2, 1))};
-    --font-size-heading-3: #{rem(list.nth($h3, 1))};
-    --font-size-heading-4: #{rem(list.nth($h4, 1))};
-    --font-size-heading-5: #{rem(list.nth($h5, 1))};
-    --font-size-large-2: #{rem(list.nth($xl, 1))};
-    --font-size-large-1: #{rem(list.nth($lg, 1))};
-    --font-size-base: #{rem(list.nth($base, 1))};
-    --font-size-small-1: #{rem(list.nth($sm, 1))};
-    --font-size-small-2: #{rem(list.nth($xs, 1))};
-  }
-}
+// フォント
+$baseFont: "Noto Sans JP", "NotoSansJP", "Noto Sans Japanese", sans-serif;
 
-// フォントサイズ
-$text-h1: var(--font-size-heading-1);
-$text-h2: var(--font-size-heading-2);
-$text-h3: var(--font-size-heading-3);
-$text-h4: var(--font-size-heading-4);
-$text-h5: var(--font-size-heading-5);
-$text-xl: var(--font-size-large-2);
-$text-lg: var(--font-size-large-1);
-$text-base: var(--font-size-base);
-$text-sm: var(--font-size-small-1);
-$text-xs: var(--font-size-small-2);
+//　テキストサイズ
+
+$text-h1: clamp(4rem, calc(100vw / 375 * 40), 6.4rem);
+$text-base: clamp(1.4rem, calc(100vw / 375 * 14), 1.6rem);
 
 // カラーパレット
-$color-txt: var(--color-txt);
-$color-reversal: var(--color-reversal);
-$color-gray: var(--color-gray);
-$color-prime: var(--color-prime);
-$color-second: var(--color-second);
-$color-third: var(--color-third);
-$color-body: var(--color-body);
-$color-highlight: var(--color-highlight);
+$color-txt: #333;
+$color-reversal: #fff;
+$color-prime: #00f;
+$color-second: #f0f;
 
-// トランジッション
-$easing: var(--transition);
+// イージング
+$easing: 0.4s ease-out;
