--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ const { page } = Astro.props;
     <main id="main">
       <slot />
     </main>
-    <Footer copyright={common.head.copyright} />
+    <Footer copyright={common.head.copyright} menu={common.menu} />
     <script>
       import "@/js/app.js";
     </script>
