--- a/src/scss/layouts/_l_main.scss
+++ b/src/scss/layouts/_l_main.scss
@@ -1,1 +1,11 @@
+// ================================================
+// メインコンテンツ
+// ================================================
 
+#main {
+  padding-top: 6rem; // 60px(header height)
+
+  @include mq() {
+    padding-top: 7rem; // 70px(header height)
+  }
+}
