--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -21,3 +21,28 @@
     display: none !important;
   }
 }
+
+// スクリーンリーダー用
+.txtHidden {
+  position: absolute;
+  width: 0.1rem;
+  height: 0.1rem;
+  overflow: hidden;
+  white-space: nowrap;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+}
+
+// キーボード操作時のみに表示
+.skipLink {
+  &:focus-visible {
+    z-index: 99;
+    width: 100%;
+    height: 1.5em;
+    color: $color-reversal;
+    outline-offset: 0;
+    background-color: $color-prime;
+    clip: unset;
+    clip-path: none;
+  }
+}
