--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -35,7 +35,44 @@
     }
   }
 
-  &:focus-visible {
+  &:focus-visible,
+  &:active {
     @content;
+  }
+}
+
+// SVGマスク
+// ------------------------------------------------
+// extendに登録したsvgアイコンをmask-imageで出力
+// ------------------------------------------------
+@mixin mask($svg, $color, $size: 100%) {
+  @extend %#{$svg};
+
+  background-color: $color;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: $size;
+}
+
+// フォントサイズ
+// ------------------------------------------------
+// PC/SPを一括で出力
+// 引数：PC,SP
+// ------------------------------------------------
+@mixin fontsize($pcSize: list.nth($base, 1), $spSize: $pcSize) {
+  $magnification: 1;
+  @if $spDesign < 750 {
+    // SPデザインが等倍だった場合最大サイズを2倍に変更
+    $magnification: 2;
+  } @else {
+    // そのままでOK
+  }
+  @if $spFontVw == "true" {
+    font-size: string.unquote("min(#{math.div(100, $spDesign) * $spSize}vw,#{math.div($spSize * $magnification, 10) + rem})");
+  } @else {
+    font-size: #{math.div($spSize, 10) + rem};
+  }
+  @include mq() {
+    font-size: #{math.div($pcSize, 10) + rem};
   }
 }
