[add]サンプルページ

--- a/src/layouts/Common.astro
+++ b/src/layouts/Common.astro
@@ -57,24 +57,19 @@ export const common: CommonConfig = {
       txt: "概要",
     },
     {
-      link: "/contact/",
-      txt: "お問い合わせ",
+      link: "/sample/",
+      txt: "サンプル",
     },
   ],
   footer: {
     companyInfo: {
       name: "Astroサンプルサイト",
-      desc: "モダンなWebサイト構築のためのデモンストレーションサイトです。Astroフレームワークを使用して作成されています。"
+      desc: "モダンなWebサイト構築のためのデモンストレーションサイトです。Astroフレームワークを使用して作成されています。",
     },
     tech: {
       ttl: "使用技術",
-      items: [
-        "Astro",
-        "TypeScript",
-        "SCSS",
-        "Tailwind CSS"
-      ]
-    }
+      items: ["Astro", "TypeScript", "SCSS", "Tailwind CSS"],
+    },
   },
 };
 ---
