--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -39,6 +39,8 @@ $color-prime: #3b82f6;
 $color-second: #8b5cf6;
 $color-third: #00f;
 
+// PCデザインサイズ
+$pcDesign: 1366;
 // SPのデザインサイズ
 $spDesign: 375;
 // SPデザインに応じた倍率設定
