--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -81,4 +81,19 @@ const {
       </p>
     </div>
   </div>
+
+  <!-- ページトップへ戻るボタン -->
+  <a href="#" class="page_top" aria-label="ページトップへ戻る">
+    <svg
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M12 4L4 12L5.41 13.41L11 7.83V20H13V7.83L18.59 13.41L20 12L12 4Z"
+        fill="currentColor"></path>
+    </svg>
+  </a>
 </footer>
