--- a/src/scss/components/_c_navi.scss
+++ b/src/scss/components/_c_navi.scss
@@ -36,6 +36,7 @@
     }
 
     li {
+      position: relative;
       @include mq() {
         display: flex;
       }
@@ -69,12 +70,129 @@
           }
         }
 
+        &.-active {
+          &::after {
+            width: 100%;
+          }
+        }
+
         span {
           display: block;
           line-height: 100%;
           @include fontsize(24);
           @include mq() {
             display: none;
+          }
+        }
+      }
+      /// -----------------サブメニュー//
+      &.has-child {
+        @include mq(sp) {
+          overflow: hidden;
+        }
+
+        .spAccordion {
+          position: absolute;
+          inset: 0 0 0 auto;
+          aspect-ratio: 1/1;
+          margin: auto;
+
+          > span {
+            display: block;
+            width: 100%;
+            height: 100%;
+            color: transparent;
+            text-indent: -999rem;
+
+            &::before,
+            &::after {
+              position: absolute;
+              inset: 0;
+              display: block;
+              width: 100%;
+              margin: auto;
+              content: "";
+              transition: rotate $easing;
+            }
+
+            &::before {
+              rotate: 90deg;
+            }
+          }
+
+          &.-open {
+            > span {
+              &::before {
+                rotate: none;
+              }
+            }
+          }
+        }
+
+        // サブメニュー本体
+        > ul.subMenu {
+          @include mq() {
+            position: absolute;
+            inset: 0 0 auto -50%;
+            display: grid;
+            visibility: hidden;
+            grid-template-columns: 1fr;
+            gap: 0.8rem;
+            width: 200%;
+            padding: 0.8rem;
+            overflow: visible;
+            background-color: $color-prime;
+            opacity: 0;
+            transition:
+              top 0.8s cubic-bezier(0.165, 0.84, 0.44, 1),
+              opacity $easing;
+          }
+          @include mq(sp) {
+            position: relative;
+            visibility: hidden;
+            height: 0;
+            max-height: none;
+            transition:
+              height $easing,
+              opacity $easing;
+
+            &.-open {
+              visibility: visible;
+              height: var(--subHeaderHeight);
+              opacity: 1;
+            }
+          }
+
+          > li {
+            > a {
+              color: $color-reversal;
+              @include mq() {
+                &::before {
+                  right: auto;
+                }
+              }
+            }
+          }
+
+          &.-open {
+            height: var(--subHeightOpen, auto);
+          }
+        }
+        @include mq() {
+          @include hover {
+            ul.subMenu {
+              top: 100%;
+              visibility: visible;
+              opacity: 1;
+            }
+          }
+          // キーボード操作時に子メニューを閉じないようにする
+          &:focus-within {
+            > ul.subMenu {
+              top: 100%;
+              visibility: visible;
+              opacity: 1;
+            }
           }
         }
       }
